<!--
  ~ Copyright (C) 2016-2020 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-6628325093439880~5565643834</string>
    <string name="app_name">ShowTouchesEnabler</string>
    <string name="banner_ad_1_id" translatable="false">ca-app-pub-6628325093439880/3631413937</string>
    <string name="dialog_button_install">Install</string>
    <string name="dialog_title_install_ext">Support Package Required</string>
    <string name="interstitial_ad_2_id" translatable="false">ca-app-pub-6628325093439880/1005250596</string>
    <string name="key_disable_ads" translatable="false">pref_disable_ads</string>
    <string name="key_grant_permission" translatable="false">pref_grant_permission</string>
    <string name="key_other_apps" translatable="false">pref_other_apps</string>
    <string name="key_pref_donate" translatable="false">pref_donate_dev</string>
    <string name="key_rate_on_g_play" translatable="false">pref_rate_on_g_play</string>
    <string name="key_show_touches" translatable="false">show_touches</string>
    <string name="key_version" translatable="false">pref_version</string>
    <string name="key_watch_ads" translatable="false">pref_watch_ads</string>
    <string name="msg_ad_loaded">Ad Loaded</string>
    <string name="msg_ad_loading">Ad Loading</string>
    <string name="msg_ad_not_loaded">Ad Not Loaded yet</string>
    <string name="msg_billing_error">Billing Error</string>
    <string name="msg_donation_done">Thanks for your support</string>
    <string name="msg_done">Done</string>
    <string name="msg_donation_thanks">Thank you for your contribution</string>
    <string name="msg_downloading_ext">Downloading Extension</string>
    <string name="msg_error">Some Error occurred.</string>
    <string name="msg_ext_downloaded">Extension Downloaded</string>
    <string name="msg_info_iab_na">In-app billing service is unavailable</string>
    <string name="msg_install_ext_dialog">Please install small support package for changing system settings</string>
    <string name="msg_secure_settings_permission">Please grant app to write Secure Settings permission</string>
    <string name="msg_setting_not_allowed">Write not allowed</string>
    <string name="msg_touch_disabled">Touches Disabled</string>
    <string name="msg_touch_enabled">Touches Enabled</string>
    <string name="msg_update_available">Update Available. Click to Update</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_support">Support Development</string>
    <string name="pref_summary_donation">to support development</string>
    <string name="pref_summary_grant_ss">Click to open system settings to grant write settings permission.</string>
    <string name="pref_summary_other_apps">Check out my other apps!</string>
    <string name="pref_summary_watch_ad">Support Development by Watching Ads</string>
    <string name="pref_title_disable_ads">Disable Ads</string>
    <string name="pref_title_donate_dev">Donate Developer</string>
    <string name="pref_title_grant_ss">Grant Permission</string>
    <string name="pref_title_other_apps">Other Apps</string>
    <string name="pref_title_rate_g_play">Rate on Google Play</string>
    <string name="pref_title_show_touches">Show Touches</string>
    <string name="pref_title_watch_ad">Watch Ads to Support Development</string>
    <string name="url_play_store_app_page" translatable="false">https://play.google.com/store/apps/details?id=com.afterroot.touchenabler</string>
    <string name="url_play_store_developer" translatable="false">https://play.google.com/store/apps/dev?id=5302118761742285445</string>
    <string name="dialog_button_learn_more">Learn More</string>
    <string name="url_learn_more">https://pointerreplacer.page.link/ext_learn_more</string>
    <string name="format_version">Version %1$s (%2$d)</string>
    <string name="msg_install_extension_first">Please install Extension First</string>
    <string name="action_grant">Grant</string>
    <string name="test">test</string>
    <string name="fcm_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_channel_default">Updates</string>
    <string name="made_with_love">Made with ❤ In India.</string>
    <string name="url_privacy_policy" translatable="false">https://afterroot.web.app/privacy-policy</string>
    <string name="text_please_wait">Please Wait..</string>
</resources>
