<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016-2019 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/key_show_touches"
        app:summaryOff="@string/msg_touch_disabled"
        app:summaryOn="@string/msg_touch_enabled"
        app:title="@string/pref_title_show_touches" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:isPreferenceVisible="false"
        app:key="@string/key_disable_ads"
        app:summaryOff="will only disable Full Screen Ads shown when toggling 'Show Touches'"
        app:summaryOn="BTW, Ads help me to support development"
        app:title="@string/pref_title_disable_ads" />
    <PreferenceCategory app:title="@string/pref_category_support">
        <Preference
            app:key="@string/key_pref_donate"
            app:summary="@string/pref_summary_donation"
            app:title="@string/pref_title_donate_dev" />
        <Preference
            app:key="@string/key_watch_ads"
            app:summary="@string/pref_summary_watch_ad"
            app:title="@string/pref_title_watch_ad" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_category_about">
        <Preference app:key="@string/key_version" />
        <Preference
            app:key="@string/key_other_apps"
            app:summary="@string/pref_summary_other_apps"
            app:title="@string/pref_title_other_apps">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_play_store_developer" />
        </Preference>
        <Preference
            app:key="@string/key_rate_on_g_play"
            app:title="@string/pref_title_rate_g_play">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_play_store_app_page" />
        </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>